CB-28372 exclude the host group validations and mappings for 'ecs' groups These are groups not meant to be part of the CDP cluster hence we don't need to generate them into the CM template not validatate the services running on them. These instances will be used later to install the ECS cluster.
This applies only for internal accounts only.